Изменение текста и окна для отзывов

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<a href="/" class="logo"><img src="images/logo.png" alt="Urip Logo"></a> <!-- Your Logo -->
                         <a class="phone " href="tel:89324366699"><i class="icon-phone"></i> 8 (932) 43-666-99</a>
                         <a class="email" href="mailto:serdimoa@gmail.com">@ serdimoa@gmail.com</a>
-						<a href="#0" id="nav-menu-trigger" class="menu-toggle flip pull-right all-caps">Меню<span class="icon-menu5"></span></a> <!-- Menu Toggle -->
+						<a href="#0" id="nav-menu-trigger" class="menu-toggle flip pull-right all-caps mgtop25">Меню<span class="icon-menu5"></span></a> <!-- Menu Toggle -->
 
 					</div> <!--/ .col-lg-12 -->
 
@@ -167,7 +167,7 @@
 										<h4 class="all-caps margin-bot-15">Узнай стоимость написания твоей работы</h4>
 
 										<p class="zero-bottom">
-										Заказ диплома, курсовой, реферата и любой<a href="#0" class="more"> другой </a>студенческой работы.
+										Заказ дипломной, курсовой, реферата и любой<a href="#0" class="more	all-caps other-text"> другой </a>студенческой работы.
 										</p>
 
 										<form class="register-form margin-top-32 margin-bot-5" id="register-form" method="post">
@@ -524,7 +524,7 @@
 
 						<div class="col-lg-10 col-lg-offset-1">
 
-							<p>Цены при заказе дипломных, курсовых или других работ варьируются в значительной степени в зависимости от сложности выполнения работы и требования учебного заведения, также в стоимости работы учитываются сроки. <strong>Срочные работы оцениваются дороже</strong></p>
+							<p>Цены при заказе дипломных, курсовых или других работ варьируются в значительной степени от сложности работы, требования учебного заведения, сроков выполнения. <strong>Срочные работы оцениваются чуть-чуть дороже</strong></p>
 
 						</div><!--/ .col-lg-10 -->
 
@@ -577,7 +577,7 @@
 									<div class="col-lg-10 col-md-10">
 										<h4 class="feature-title">Индивидуальный подход</h4>
 
-										<p>Каждый заказ важен для нас, поэтому мы пишется с учётом Ваших и требований Вашего ВУЗа и пожеланий Вашего руководителя.</p>
+										<p>Каждый заказ важен для нас, поэтому мы пишем с учётом Ваших требований, Вашего ВУЗа и Вашего руководителя.</p>
 									</div>
 								</a>
 
@@ -595,11 +595,7 @@
 									<div class="col-lg-10 col-md-10">
 										<h4 class="feature-title">Профессионализм</h4>
 
-										<p>Учебные и научные работы пишут только кандидаты наук, аспиранты, научные сотрудники. Каждая работа выполняется на высоком уровне специалистом именно в выбранной научной сфере
-
-                                            Мы выполняем заказы наших клиентов в точно установленный срок.
-
-                                            Качество наших работ никогда не приносится в жертву скорости работы.</p>
+										<p>Учебные и научные работы пишут только кандидаты наук, аспиранты, научные сотрудники. Каждая работа выполняется на высоком теоретическом и методологическом уровне ИМЕННО специалистом в данной научной сфере. Качество наших работ никогда не приносится в жертву скорости написания!</p>
 									</div>
 								</a>
 
@@ -619,9 +615,7 @@
 									<div class="col-lg-10 col-md-10">
 										<h4 class="feature-title">Оригинальность работы</h4>
 
-										<p>Каждая работа пишется индивидуально и существует в единственном экземпляре, только для Вас.
-
-                                            Бесплатное и срочное исправление возможных недостатков в работе</p>
+										<p>Каждая работа индивидуальна и существует в единственном экземпляре, только для Вас. Проверка в любой программе антиплагиат, бесплатное и срочное исправление возможных недостатков в работе.</p>
 									</div>
 								</a>
 
@@ -639,7 +633,7 @@
 									<div class="col-lg-10 col-md-10">
 										<h4 class="feature-title">Репутация</h4>
 
-										<p>Мы заботимся о нашей репутации. Опуская этическую сторону вопроса, нам экономически выгодно работать честно. Дело в том, что более половины наших заказчиков составляют люди, уже пользующиеся нашими услугами, т.е. по их рекомендациям, уже ставших нашими заказчиками.</p>
+										<p>Мы заботимся о нашей репутации. Нам экономически выгодно работать только честно, т.к. большую часть наших заказчиков составляют люди, уже пользующиеся нашими услугами и рекомендующих Нас своим знакомым, поэтому мы не можем подвести!</p>
 									</div>
 								</a>
 
@@ -658,9 +652,9 @@
 									</div>
 
 									<div class="col-lg-10 col-md-10">
-										<h4 class="feature-title">Честность и порядочность</h4>
+										<h4 class="feature-title">Честность и гарантии</h4>
 
-										<p>Мы не беремся за любую работу. Если мы по каким-либо причинам не можем выполнить работу, мы просто за нее не возьмемся. Если выполненная работа не соответствует предъявленным при заказе требованиям, и Вы обоснованно сообщите нам об этом, мы вернем Вам полученные от Вас деньги.</p>
+										<p>Мы не беремся за любую работу, которая вдруг станет нам не по силам. Если мы по каким-либо причинам не можем ее выполнить, то честно Вам об этом сообщим. Если выполненная работа не соответствует предъявленным при заказе требованиям, и Вы обоснованно сообщите нам об этом, возврат оплаты за заказ обязателен.</p>
 									</div>
 								</a>
 
@@ -678,7 +672,7 @@
 									<div class="col-lg-10 col-md-10">
 										<h4 class="feature-title">Конфиденциальность</h4>
 
-										<p>Принцип конфиденциальности в отношении любой информации, получаемой от заказчика, является одним из главных для нас. Также мы уважаем принцип анонимности заказчика.</p>
+										<p>Принцип конфиденциальности в отношении информации, получаемой от заказчика, является одним из главных для нас. Мы уважаем принцип анонимности заказчика.</p>
 									</div>
 								</a>
 
@@ -842,7 +836,7 @@
 
 							<p class="section-title">Вот что о нас говорят </p>
 
-							<h2 class="section-heading">Отзывы студентов</h2>
+							<h2 class="section-heading">Отзывы</h2>
 
 						</div> <!--/ .col-lg-8 -->
 
@@ -936,7 +930,7 @@
 
 						<div class="clearfix"></div>
 
-						<a href="#0" class="cta cta-default all-caps contact-trigger">Цены на выполнение работ</a>
+						<a href="#0" class="cta cta-default all-caps" data-toggle="modal" data-target="#myModal">Оставить свой отзыв</a>
 
 					</div> <!--/ .row -->
 				</div> <!--/ .container -->
@@ -1195,8 +1189,44 @@
 		==/ END CONTACT MODAL CONTENT ==
 		================================
 		-->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" style="z-index:9999" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Оставить свой отзыв</h4>
+      </div>
+      <div class="modal-body">
 
 
+      <div class="container">
+        <div class="row">
+            <form role="form">
+              <div class="form-group">
+                <label for="first">Ваше имя:</label>
+                <input type="text" class="form-control" id="first">
+              </div>
+              <div class="form-group">
+                <label for="email">Ваш E-mail:</label>
+                <input type="email" class="form-control" id="email">
+              </div>
+                <div class="form-group">
+                	<div class="message">
+                    	<label for="message">Ваш отзыв:</label>
+                	</div>
+                	<textarea></textarea>
+                </div>
+            </form>
+        </div>
+     </div>
+
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default send_rewiev" data-dismiss="modal">Отправить отзыв</button>
+      </div>
+    </div>
+  </div>
+</div>
 		<!--
 		======================================
 		== BEGIN FORM NOTIFICATIONS CONTENT ==
