--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@
 
 										<h4 class="all-caps margin-bot-15">Узнай стоимость написания твоей работы</h4>
 
-										<p class="zero-bottom">
-										Заказ дипломной, курсовой, реферата и любой<a href="#0" class="more	all-caps other-text"> другой </a>студенческой работы.
-										</p>
+
 
 										<form class="register-form margin-top-32 margin-bot-5" id="register-form" method="post">
 											<div class="row">
@@ -460,7 +458,7 @@
 												</div>
 
 												<div class="col-lg-7 col-md-7">
-													<button id="hero-submit" type="submit" class="submit-btn">Узнать стоимость</button>
+													<button onclick=prepareMessage() type="button" class="submit-btn">Узнать стоимость</button>
 												</div>
 
 											</div>
@@ -739,7 +737,7 @@
 
 						<div class="clearfix"></div>
 
-						
+
 
 					</div> <!--/ .row -->
 				</div> <!--/ .container-full -->
