Добавление ссылок на страницу: Условия работы

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 			<ul class="secondary-nav">
                 <li><a class="contact-trigger">Наши цены</a></li>
+                <li><a href="Terms-license.html">Условия работы</a></li>
                 <li><a href="single.html">Для авторов</a></li>
 			</ul> <!--/ .secondary-nav -->
 
@@ -1017,6 +1018,7 @@
 						<li><a class="more" href="#0">Наши гарантии</a></li>
 						<li><a class="more" href="#0">Отзывы</a></li>
 						<li><a class="more" href="#0">наши цены</a></li>
+						<li><a class="more" href="Terms-license.html">Условия работы</a></li>
 						<li><a class="more" href="#0">для авторов</a></li>
 					</ul> <!--/ .footer-nav -->
 
