--- a/single.html
+++ b/single.html
@@ -115,6 +115,7 @@
 
 			<ul class="secondary-nav">
 				<li><a href="index.html">Главная</a></li>
+				<li><a href="Terms-license.html">Условия работы</a></li>
 				<li class="current"><a href="/">Для авторов</a></li>
 				<li><a class="contact-trigger">Стать автором</a></li>
 			</ul> <!--/ .secondary-nav -->
@@ -329,6 +330,7 @@
 						<li><a class="more" href="index.html#hero">Главная</a></li>
 						<li><a class="more" href="index.html#what-we-do">О стоимости</a></li>
 						<li><a class="more" href="index.html#our-features">Наши гарантии</a></li>
+						<li><a class="more" href="Terms-license.html">Условия работы</a></li>
 						<li><a class="more" href="index.html#customer-story">Отзывы</a></li>
 						<li><a class="more" href="single.html">для авторов</a></li>
 					</ul> <!--/ .footer-nav -->
