Внесение изменений из списка

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 											</div>
 										</form> <!--/ .register-form -->
 
-										<p class="zero-bottom all-caps">Либо позвоните нам по телефону <br/> <a href="tel:89324366699" style=" font-size: 3em; line-height: 1;" class="more">8 (932) 43 - 666 - 99</a></p>
+										<p class="zero-bottom all-caps">Либо позвоните нам по телефону <br/> <a href="tel:89324366699" style=" font-size: 2.7em; line-height: 1;" class="more">8 (932) 43 - 666 - 99</a></p>
 
 									</div> <!--/ .hero-form-wrapper -->
 
@@ -724,7 +724,7 @@
 
 							<p> </p>
 
-							<ul class="checklist">
+							<ul class="checklist fs18">
 								<li>Доработки по замечаниям преподавателей.</li>
 								<li>Консультации квалифицированных менеджеров.</li>
 								<li>Ваш спокойный сон.</li>
