--- a/single.html
+++ b/single.html
@@ -205,7 +205,7 @@
 										</blockquote>
 
 										<h3>Есть всего несколько критериев, которые необходимы для того, чтобы стать автором работ:</h3>
-										<ul class="checklist">
+										<ul class="checklist fs18">
 											<li> наличие высшего образования и соответствующих знаний в научной области;
 											</li>
 											<li> возможность несколько часов в день (в зависимости от занятости) уделять выполнению заявок;
@@ -219,7 +219,7 @@
 
 										<div class="col-lg-12 text-center">
 											<h3>Нам требуются авторы по всем предметам и научным работам</h3>
-										<a href="#0" class="cta cta-default all-caps contact-trigger"> Анкета для авторов</a>
+										<a href="#0" class="cta cta-default all-caps"> Анкета для авторов</a>
 										<br>
 										<br>
 										<br>
@@ -227,7 +227,7 @@
 										</div>
 
 										<h3>В свою очередь, мы можем предложить Вам:</h3>
-										<ul class="checklist">
+										<ul class="checklist fs18">
 
 
 										<li>доход, зависящий только от Вашего желания работать и наличия свободного времени;</li>
