--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 					<div class="col-lg-12">
 
 						<a href="/" class="logo"><img src="images/logo.png" alt="Urip Logo"></a> <!-- Your Logo -->
-                        <a class="phone " href="tel:89324366699"><i class="icon-phone"></i> 8 (932) 43-666-99</a>
-                        <a class="email" href="mailto:serdimoa@gmail.com">@ serdimoa@gmail.com</a>
+                        <a class="phone " href="tel:89821863625"><i class="icon-phone"></i> 8 (982) 186-36-25</a>
+                        <a class="email" href="mailto:russky.diplom@yandex.ru">@ russky.diplom@yandex.ru</a>
 						<a href="#0" id="nav-menu-trigger" class="menu-toggle flip pull-right all-caps mgtop25">Меню<span class="icon-menu5"></span></a> <!-- Menu Toggle -->
 
 					</div> <!--/ .col-lg-12 -->
@@ -459,13 +459,13 @@
 												</div>
 
 												<div class="col-lg-7 col-md-7">
-													<button onclick=prepareMessage() type="button" class="submit-btn">Узнать стоимость</button>
+													<button onclick="prepareMessage()" type="button" class="submit-btn">Узнать стоимость</button>
 												</div>
 
 											</div>
 										</form> <!--/ .register-form -->
 
-										<p class="zero-bottom all-caps">Либо позвоните нам по телефону <br/> <a href="tel:89324366699" style=" font-size: 2.7em; line-height: 1;" class="more">8 (932) 43 - 666 - 99</a></p>
+										<p class="zero-bottom all-caps">Либо позвоните нам по телефону <br/> <a href="tel:89821863625" style=" font-size: 2.7em; line-height: 1;" class="more">8 (982) 186 - 36 - 25</a></p>
 
 									</div> <!--/ .hero-form-wrapper -->
 
@@ -798,11 +798,11 @@
 									<h4>Остались вопросы?</h4>
 									<p class="sub-lead">Позвоните, напишите нам, и Вы останетесь довольны результатом!
                                     </p>
-                                    <h3>8(932) 999-999-99</h3>
+                                    <h3>8 (982) 186-36-25</h3>
 
-									<a href="#0" class="cta cta-default all-caps clearfix" data-sr="enter bottom over 1s and move 75px">Заказать работу</a>
+									<a href="#" class="cta cta-default all-caps clearfix" data-sr="enter bottom over 1s and move 75px">Заказать работу</a>
 									<div class="clearfix"></div>
-									<small data-sr="enter bottom over 1s and move 75px wait 0.2s"><em>*no credit card required</em></small>
+									<small data-sr="enter bottom over 1s and move 75px wait 0.2s"><em></em></small>
 
 								</div> <!--/ .col-lg-12 -->
 
@@ -1013,13 +1013,13 @@
 				<div class="row">
 
 					<ul class="footer-nav all-caps">
-						<li><a class="more" href="#0">Главная</a></li>
-						<li><a class="more" href="#0">О стоимости</a></li>
-						<li><a class="more" href="#0">Наши гарантии</a></li>
-						<li><a class="more" href="#0">Отзывы</a></li>
-						<li><a class="more" href="#0">наши цены</a></li>
-						<li><a class="more" href="Terms-license.html">Условия работы</a></li>
-						<li><a class="more" href="#0">для авторов</a></li>
+                        <li><a class="more" href="index.html#hero">Главная</a></li>
+                        <li><a class="more" href="index.html#what-we-do">О стоимости</a></li>
+                        <li><a class="more" href="index.html#our-features">Наши гарантии</a></li>
+                        <li><a class="more" href="index.html#customer-story">Отзывы</a></li>
+                        <li><a class="more contact-trigger" href="#0">наши цены</a></li>
+                        <li><a class="more" href="Terms-license.html">Условия работы</a></li>
+                        <li><a class="more" href="single.html">для авторов</a></li>
 					</ul> <!--/ .footer-nav -->
 
 
